--- a/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/bio_sample.mapping.json
+++ b/ga4gh-resources/src/main/resources/org/collaboratory/ga4gh/resources/mappings/bio_sample.mapping.json
@@ -5,6 +5,18 @@
 				"type": "keyword",
 				"index": "true"
 			},
+			"donor_id": {
+				"type": "keyword",
+				"index": "true"
+			},
+			"data_set_id": {
+				"type": "keyword",
+				"index": "true"
+			},
+			"reference_set_id": {
+				"type": "keyword",
+				"index": "true"
+			},
 			"vcf_header": {
 				"type": "keyword",
 				"index": "false"
